--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -9,6 +9,13 @@ $baby-blue: #8ebdb6;
 $yellow-white: #ece1c3;
 
 
+// https://paletadecores.com/paleta/063940/195e63/3e838c/8ebdb6/ece1c3/
+// ----
+
+
+
+
+
 //tons de preto e branco
 $white:    #fff;
 $gray-100: #f8f9fa;
