--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -11,6 +11,11 @@ $yellow-white: #ece1c3;
 
 // https://paletadecores.com/paleta/063940/195e63/3e838c/8ebdb6/ece1c3/
 // ----
+$verde-lago: #62A07B;
+$blue-piscina:#4F8B89;
+$blue-sky: #536C8D;
+$roxo-pastel: #5C4F79;
+$roxo-vinho: #613860;
 
 
 
