--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -1,6 +1,7 @@
 @use '../custom' as *;
 // mixin gradiente
 @mixin gradient {
-    background: linear-gradient(to right, rgba($dark-blue, 0.95), rgba($neutral-blue, 0.95)) ;
+    background: linear-gradient(to right, rgba($dark-blue, 0.95), rgba($verde-lago, 0.95)) ;
 }
+
 
