--- a/scss/sections/_sobremim.scss
+++ b/scss/sections/_sobremim.scss
@@ -2,21 +2,51 @@
 @use '../components/mixins' as *;
 
 .sobre-mim{
-    border: $yellow-white;
-    box-shadow: 0 4px 8px $yellow-white;
-    color: $black;
-    text-align: center;
-    padding: 2rem;
-    max-width: 800px;
-    // margin: auto;
-    margin: 10rem auto 0;
-    
-  .textos{
-    max-width: 600px;
-    width: 100%;
-    margin: auto;
-    h1{
-        height: auto;
+
+@media (max-width: 768px) {
+    flex-direction: column; // Alinha os itens em coluna em dispositivos menores
+    text-align: center; // Centraliza o texto no modo de coluna
+
+    .icone-sobre {
+        margin-bottom: 1rem; // Adiciona espaço abaixo da imagem
     }
-  }
 }
+}
+// --- teste
+.sobre-mim {
+    padding-right: 40px;
+    padding-top: 360px;
+    column-count: 2;
+    // column-width: 250px; 
+    text-align: center;
+    columns: 2 450px;
+    // column-rule: 3px solid #333;
+    column-gap: 3rem;
+}
+
+.sobre-mim h1 {
+    margin-top: 0;
+    margin-bottom: 40px;
+}
+
+.sobre-mim p {
+    margin-top: 0;
+    margin-bottom: 40px;
+
+}
+.icone-sobre {
+    padding-left: 30px;
+    margin-top: 0;
+    // background-color: #333;
+    color: #fff;
+    padding: 1rem;
+    break-inside: avoid; 
+    break-before: column; 
+    
+    img {
+        width: 400px; // Ajuste conforme necessário
+        height: auto; // Mantém a proporção da imagem
+    }
+}
+
+
