--- a/scss/sections/_sobremim.scss
+++ b/scss/sections/_sobremim.scss
@@ -2,18 +2,6 @@
 @use '../components/mixins' as *;
 
 .sobre-mim{
-
-@media (max-width: 768px) {
-    flex-direction: column; // Alinha os itens em coluna em dispositivos menores
-    text-align: center; // Centraliza o texto no modo de coluna
-
-    .icone-sobre {
-        margin-bottom: 1rem; // Adiciona espaço abaixo da imagem
-    }
-}
-}
-// --- teste
-.sobre-mim {
     padding-right: 40px;
     padding-top: 360px;
     column-count: 2;
@@ -22,7 +10,32 @@
     columns: 2 450px;
     // column-rule: 3px solid #333;
     column-gap: 3rem;
+
+@media (max-width: 768px) {
+    padding-right: 1rem;
+    padding-top: 2rem;
+
+    .icone-sobre {
+    margin-bottom: 1rem; // Adiciona espaço abaixo da imagem
+    flex-direction: column;
+    }
+    img{
+        width: 200px;
+        height: auto;
+    }
 }
+}
+// --- teste
+// .sobre-mim {
+//     padding-right: 40px;
+//     padding-top: 360px;
+//     column-count: 2;
+//     // column-width: 250px; 
+//     text-align: center;
+//     columns: 2 450px;
+//     // column-rule: 3px solid #333;
+//     column-gap: 3rem;
+// }
 
 .sobre-mim h1 {
     margin-top: 0;
