baixar-cv-botao

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11944,6 +11944,23 @@ textarea.form-control-lg {
   margin-bottom: 40px;
 }
 
+.download-btn {
+  background: linear-gradient(to right, rgba(6, 57, 64, 0.95), rgba(98, 160, 123, 0.95));
+  display: inline-block;
+  padding: 10px 50px;
+  font-size: 16px;
+  color: white;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.download-btn:hover {
+  background-color: #0056b3;
+}
+
 .carrossel-fotos {
   display: flex;
   justify-content: center;
