--- a/scss/sections/_sobremim.scss
+++ b/scss/sections/_sobremim.scss
@@ -24,6 +24,22 @@
         height: auto;}
         }
     }
+    .download-btn {
+        @include gradient;
+        display: inline-block;
+        padding: 10px 50px;
+        font-size: 16px;
+        color: white;
+        background-color: #007bff;
+        border: none;
+        border-radius: 5px;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    .download-btn:hover {
+        background-color: #0056b3;
+    }
 }
  
 .icone-sobre {
