--- a/scss/sections/_sobremim.scss
+++ b/scss/sections/_sobremim.scss
@@ -22,24 +22,25 @@
         img{
         width: 200px;
         height: auto;}
-        }
+        } 
     }
-    .download-btn {
-        @include gradient;
-        display: inline-block;
-        padding: 10px 50px;
-        font-size: 16px;
-        color: white;
-        background-color: #007bff;
-        border: none;
-        border-radius: 5px;
-        text-decoration: none;
-        cursor: pointer;
-    }
+    // .download-btn {
+    //     @include gradient;
+    //     display: inline-block;
+    //     padding: 10px 50px;
+    //     font-size: 16px;
+    //     color: white;
+    //     background-color: #007bff;
+    //     border: none;
+    //     border-radius: 5px;
+    //     text-decoration: none;
+    //     cursor: pointer;
+    //     box-shadow: 0 0 1rem $dark-blue;
+    // }
     
-    .download-btn:hover {
-        background-color: #0056b3;
-    }
+    // .download-btn:hover {
+    //     background-color: #0056b3;
+    // }
 }
  
 .icone-sobre {
@@ -69,19 +70,21 @@
 }
 
 
-.download-btn {
-    @include gradient;
-    display: inline-block;
-    padding: 10px 50px;
-    font-size: 16px;
-    color: white;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    cursor: pointer;
-}
+// .download-btn {
+//     display: inline-block;
+//     padding: 10px 50px;
+//     font-size: 16px;
+//     color: white;
+//     background-color: #007bff;
+//     border: none;
+//     border-radius: 5px;
+//     text-decoration: none;
+//     cursor: pointer;
+//     box-shadow: 0 0 1rem $dark-blue;
+// }
 
-.download-btn:hover {
-    background-color: #0056b3;
-}
+// .download-btn:hover {
+//     // background-color: #0056b3;
+//     color: $black;
+
+// }
