--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
 @use 'components/buttons';
 @use 'components/mixins';
 @use 'components/typography';
-
+@use 'components/images';
 //importar as seções;
 @use 'sections/footer';
 @use 'sections/contact';
