--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12025,33 +12025,23 @@ textarea.form-control-lg {
   justify-content: center;
   padding: 1rem;
 }
-.carrossel-fotos .fotos-lab {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 70%;
-  max-width: 200px;
-}
-@media (min-width: 897px) {
-  .carrossel-fotos .fotos-lab {
-    flex-direction: row;
-    width: 100%;
-    max-width: none;
-  }
-}
-.carrossel-fotos img {
-  width: 60%;
+
+.fotos-lab {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  width: 400px;
   height: auto;
+  margin: 0 auto;
+}
+
+.fotos-lab img {
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
   object-fit: cover;
   margin-bottom: 1rem;
-}
-@media (min-width: 897px) {
-  .carrossel-fotos img {
-    width: 310px;
-    height: 310px;
-    margin-bottom: 0;
-    margin-right: 1rem;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
