--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11879,6 +11879,34 @@ textarea.form-control-lg {
     background-color: #0056b3;
   }
 }
+div {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.nome-rafa {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.textos h1 {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.baixar-cv {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
 .fotos-container {
   display: flex;
   justify-content: center;
@@ -12018,6 +12046,11 @@ textarea.form-control-lg {
 .sobre-mim p {
   margin-top: 0;
   margin-bottom: 40px;
+}
+
+.experiencias {
+  text-align: center;
+  margin-top: 40px;
 }
 
 .carrossel-fotos {
