--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,10 +10,10 @@
 @use 'components/images';
 //importar as seções;
 @use 'sections/footer';
-@use 'sections/contact';
+@use 'sections/contato';
 @use 'sections/navbar';
 @use 'sections/whoiam';
-@use 'sections/experience';
+@use 'sections/experiencia';
 @use 'sections/sobremim';
 @use'sections/fotoslab'
 
