--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11936,6 +11936,7 @@ footer {
 
 .container-contato {
   text-align: center;
+  background-color: #8ebdb6;
 }
 .container-contato .section-contato {
   text-align: center;
@@ -12033,6 +12034,26 @@ footer {
 }
 .icon a:hover {
   color: #063940;
+}
+
+.container-logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 50px 0;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.icon-logo,
+.icons {
+  margin-right: 10px;
+}
+
+.icon-logo img,
+.icons img {
+  max-width: 100%;
+  height: auto;
 }
 
 .sobre-mim {
