--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12038,22 +12038,24 @@ footer {
 
 .container-logo {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   margin: 50px 0;
   margin-left: 20px;
   margin-right: 20px;
 }
 
-.icon-logo,
-.icons {
-  margin-right: 10px;
+.icon-logo {
+  margin-right: 20px;
 }
 
-.icon-logo img,
-.icons img {
+.icon-logo img {
   max-width: 100%;
   height: auto;
+}
+
+.icon-logo:last-child {
+  margin-right: 0;
 }
 
 .sobre-mim {
