--- a/scss/sections/_sobremim.scss
+++ b/scss/sections/_sobremim.scss
@@ -3,7 +3,7 @@
 
 .sobre-mim{
     padding-right: 40px;
-    padding-top: 360px;
+    // padding-top: 360px;
     column-count: 2;
     text-align: center;
     columns: 2 450px;
@@ -49,9 +49,4 @@
     margin-top: 0;
     margin-bottom: 40px;
 
-}
-
-.experiencias{
-    text-align: center;
-    margin-top: 40px;
 }
