--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@
 @use 'sections/footer';
 @use 'sections/contato';
 @use 'sections/navbar';
-@use 'sections/whoiam';
+@use 'sections/perfil';
 @use 'sections/experiencia';
 @use 'sections/sobremim';
 @use'sections/fotoslab'
